--- a/data structure in python1.ipynb
+++ b/data structure in python1.ipynb
@@ -425,31 +425,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 31,
    "id": "701c64da-b273-44a7-be0c-3f2817291950",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sorted\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Q.16 create a code to check if a given list is sorted(either in ascending or descending order) or not\n",
+    "list=[9,3,4,5,0,2]\n",
+    "if sorted(list):\n",
+    "    print('sorted')\n",
+    "\n",
+    "else:\n",
+    "    print('not sorted')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "547c28d3-dc43-4ca8-9da8-ac2c3feb1c4f",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "False"
+       "<function __main__.sort(lst, ascending_order=True)>"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#Q.16 create a code to check if a given list is sorted(either in ascending or descending orfer) or not\n",
-    "list1=[5,2,9,1,0]\n",
-    "list1 is sorted\n"
+    "sort([5,6,7,8,9])\n",
+    "sort"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
-   "id": "547c28d3-dc43-4ca8-9da8-ac2c3feb1c4f",
+   "execution_count": 20,
+   "id": "332bc393-11c4-49ad-b29e-e42f4a16a7bd",
    "metadata": {},
    "outputs": [
     {
@@ -458,7 +481,7 @@
        "[1, 2, 3, 5, 5, 6, 8, 9]"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -557,7 +580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 3,
    "id": "b006cfd1-6640-404f-ba01-f881dd5a4d60",
    "metadata": {},
    "outputs": [
@@ -565,26 +588,26 @@
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "enter first tuple 5,6,7,8,9,4,5,7,8\n",
-      "enter second tuple 1,3,2,2,5,6\n"
+      "enter first tuple 478\n",
+      "enter second tuple 687\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "('5', '9', '4', '6', '2', '1', '7', ',', '8', '3')"
+       "('8', '7')"
       ]
      },
-     "execution_count": 96,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#Q.21 write a code that takles two tuples as input and returns a new tuple containing element taht are common to both input tuples.\n",
+    "#Q.21 write a code that takles two tuples as input and returns a new tuple containing element that are common to both input tuples.\n",
     "tup1=tuple(input('enter first tuple'))\n",
     "tup2=tuple(input('enter second tuple'))\n",
-    "p=set(tup1).union(set(tup2))\n",
+    "p=set(tup1).intersection(set(tup2))\n",
     "tuple(p)\n",
     "           \n"
    ]
@@ -689,7 +712,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 4,
    "id": "1ade890c-a8a2-47e6-ba4d-b3e03f82a30b",
    "metadata": {},
    "outputs": [
@@ -697,17 +720,17 @@
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "enter string1 raunak\n",
-      "enter string2 gupta\n"
+      "enter string1 'rajesh'\n",
+      "enter string2 'mukesh'\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "{'k', 'n', 'r'}"
+       "{'a', 'j', 'k', 'm', 'r', 'u'}"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -716,7 +739,7 @@
     "#Q.30 develop a code that prompts the user to input two sets of strings . then,print the symmetric diffrence of these two sets\n",
     "s1=set(input(\"enter string1\"))\n",
     "s2=set(input(\"enter string2\"))\n",
-    "s1-s2"
+    "s1^s2#symmetric difference"
    ]
   },
   {
@@ -756,39 +779,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 17,
    "id": "ff45f735-c817-41a3-bf73-191c5391b55d",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "enter your first dictionary {'a':0,'b':9}\n"
-     ]
-    },
-    {
-     "ename": "ValueError",
-     "evalue": "dictionary update sequence element #0 has length 1; 2 is required",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[35], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m#write a code that takes two dictionaries as input and merges thyem into a single ndictionary. if there are common keys , the values shoukld be added togerher\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m dict1\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;43mdict\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;28;43minput\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43menter your first dictionary\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m      3\u001b[0m dict2\u001b[38;5;241m=\u001b[39m\u001b[38;5;28mdict\u001b[39m(\u001b[38;5;28minput\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124menter your second dictionary\u001b[39m\u001b[38;5;124m\"\u001b[39m))\n\u001b[1;32m      4\u001b[0m dict1 \u001b[38;5;241m+\u001b[39m dict2\n",
-      "\u001b[0;31mValueError\u001b[0m: dictionary update sequence element #0 has length 1; 2 is required"
+      "{'a': 78, 'b': 45, 'c': 179, 'd': 8}\n"
      ]
     }
    ],
    "source": [
-    "#Q.32 write a code that takes two dictionaries as input and merges thyem into a single ndictionary. if there are common keys , the values shoukld be added togerher\n",
-    "dict1=dict(input(\"enter your first dictionary\"))\n",
-    "dict2=dict(input(\"enter your second dictionary\"))\n",
-    "dict1 + dict2"
+    "#Q.32 write a code that takes two dictionaries as input and merges them into a single dictionary. if there are common keys , the values shoukld be added togerher\n",
+    "from collections import Counter\n",
+    "def merged(dict1,dict2):\n",
+    "    #convert both dictionaries to counter objects\n",
+    "    #counter automatically adds up same key's values\n",
+    "    counter1=Counter(dict1)\n",
+    "    counter2=Counter(dict2)\n",
+    "    #add two counter objects\n",
+    "    merge_counter=counter1+counter2\n",
+    "    return dict(merge_counter)\n",
+    "#example usage\n",
+    "dict1={'a':0,'b':45,'c':90}\n",
+    "dict2={'d':8,'a':78,'c':89}\n",
+    "merged_dict=merged(dict1,dict2)\n",
+    "print(merged_dict)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 42,
    "id": "3bae6143-774d-4201-85d8-b067fff69ecd",
    "metadata": {},
    "outputs": [],
@@ -812,6 +835,30 @@
     "    return current_level\n",
     "    "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "39254264-097e-49da-95a3-13abea9409d4",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "72aff466-bde7-452c-9efe-c97feac4acbf",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fa0e40a9-3a58-4e28-8e91-da2c08485c0e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
